--- a/index.html
+++ b/index.html
@@ -62,31 +62,35 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-caption ">
-                    <h1>Another example headline.</h1>
-                    <p>Some representative placeholder content for the second slide of the carousel.</p>
-                    <button class="btn btn-primary">
-              Learn more
-            </button>
+                <div class="container">
+                    <div class="carousel-caption ">
+                        <h1>Another example headline.</h1>
+                        <p>Some representative placeholder content for the second slide of the carousel.</p>
+                        <button class="btn btn-primary">
+                Learn more
+                </button>
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-caption  text-end">
-                    <h1>One more for good measure.</h1>
-                    <p>Some representative placeholder content for the third slide of this carousel.</p>
-                    <button class="btn btn-primary">
-              Browse Gallery
-            </button>
+                <div class="container">
+                    <div class="carousel-caption text-end">
+                        <h1>One more for good measure.</h1>
+                        <p>Some representative placeholder content for the third slide of this carousel.</p>
+                        <button class="btn btn-primary">
+                Browse Gallery
+                </button>
+                    </div>
                 </div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
       </button>
     </div>
 
